--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 
 # display_url: https://elegant-lichterman-cc3ce6.netlify.com
 
-media_folder: static/uploads
+media_folder: /src/static/uploads
 public_folder: /uploads
 
 collections:
@@ -13,7 +13,7 @@ collections:
     files:
       - label: "Home Page"
         name: index
-        file: src/content/index.md
+        file: src/main-pages/index.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
@@ -21,7 +21,7 @@ collections:
           - { label: body, name: body, widget: markdown }
       - label: "404"
         name: "404"
-        file: src/content/404.md
+        file: src/main-pages/404.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
@@ -29,7 +29,7 @@ collections:
           - { label: body, name: body, widget: markdown }
       - label: "About Us"
         name: about-us
-        file: src/content/about-us.md
+        file: src/main-pages/about-us.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
@@ -44,7 +44,7 @@ collections:
               - { label: address, name: address, widget: string }
       - label: "Contact"
         name: contact
-        file: src/content/contact.md
+        file: src/main-pages/contact.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
@@ -52,7 +52,7 @@ collections:
           - { label: body, name: body, widget: markdown }
       - label: "Information"
         name: information
-        file: src/content/information.md
+        file: src/main-pages/information.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
@@ -67,7 +67,7 @@ collections:
               - { label: address, name: address, widget: string }
       - label: "Parents"
         name: parents
-        file: src/content/parents.md
+        file: src/main-pages/parents.md
         fields:
           - { label: title, name: title, widget: string }
           - { label: template, name: template, widget: hidden }
