--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -138,7 +138,7 @@ collections:
       - { label: body, name: body, widget: markdown }
   - name: curricula
     label: Curricula
-    folder: src/year-groups
+    folder: src/curricula
     create: false
     fields:
       - { label: title, name: title, widget: string }
