--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Stephen Ball",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.10.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.7",
+    "markdown-it-table-of-contents": "^0.4.4"
   }
 }
