toc styling, replaced p > img with p > figure using markdown-it plugin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@11ty/eleventy": "^0.10.0",
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.7",
+    "markdown-it-implicit-figures": "^0.10.0",
     "markdown-it-table-of-contents": "^0.4.4"
   }
 }
