--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -128,7 +128,7 @@ collections:
           - label: "Policy Documents"
             name: policies
             widget: list
-            fields:
+            field:
               - label: "Policy Name"
               - name: "policy"
               - widget: "file"
