added templating for governors minutes, updated CMS config to add to top

--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -144,11 +144,13 @@ collections:
           - label: "Minutes"
             name: minutes
             widget: list
+            add_to_top: true
             fields:
               - { label: Year, name: year, widget: string }
               - label: Documents
                 name: documents
                 widget: list
+                add_to_top: true
                 fields:
                   - { label: Minutes Name, name: name, widget: string }
                   - { label: Minutes Document, name: path, widget: file }
