tweaked CMS config label

--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -145,12 +145,14 @@ collections:
             name: minutes
             widget: list
             add_to_top: true
+            label_singular: "Add a year"
             fields:
               - { label: Year, name: year, widget: string }
               - label: Documents
                 name: documents
                 widget: list
                 add_to_top: true
+
                 fields:
                   - { label: Minutes Name, name: name, widget: string }
                   - { label: Minutes Document, name: path, widget: file }
