--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,5 +1,7 @@
 <IfModule mod_rewrite.c>
-	RewriteCond %{HTTPS} off [OR]
-	RewriteCond %{HTTP_HOST} ^www\.example\.com [NC]
-	RewriteRule (.*) https://example.com/$1 [L,R=301]
+	RewriteCond %{HTTPS} off
+	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+	
+	RewriteCond %{HTTP_HOST} !^www\. [NC]
+	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
