--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "markdown-it-anchor": "^7.1.0",
     "markdown-it-implicit-figures": "^0.10.0",
     "markdown-it-table-of-contents": "^0.5.2"
+  },
+  "dependencies": {
+    "eleventy-plugin-youtube-embed": "^1.6.5"
   }
 }
