updated vacancies page to allow separate vacancies

--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -114,13 +114,19 @@ collections:
         file: src/about-us/vacancies.md
         fields:
           - { label: title, name: title, widget: string }
-          - { label: body, name: body, widget: markdown }
-          - label: "Documents"
-            name: documents
+          - label: "Vacancies"
+            name: vacancies
             widget: list
             fields:
-              - { label: "Document name", name: "name", widget: "string" }
-              - { label: "Document", name: "path", widget: "file" }
+              - label: Text
+                name: text
+                widget: string
+              - label: "Documents"
+                name: documents
+                widget: list
+                fields:
+                  - { label: "Document name", name: "name", widget: "string" }
+                  - { label: "Document", name: "path", widget: "file" }
       - label: "Values"
         name: values
         file: src/about-us/values.md
