--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -264,6 +264,12 @@ collections:
         fields:
           - { label: title, name: title, widget: string }
           - { label: body, name: body, widget: markdown }
+          - label: "Nursery Documents"
+            name: documents
+            widget: list
+            fields:
+              - { label: "Document title", name: "name", widget: "string" }
+              - { label: "Nursery document", name: "path", widget: "file" }
       - label: Safeguarding
         name: safeguarding
         file: src/parents/safeguarding.md
