--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -118,6 +118,9 @@ collections:
             name: vacancies
             widget: list
             fields:
+              - label: Title
+                name: title
+                widget: string
               - label: Text
                 name: text
                 widget: string
