--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -119,7 +119,7 @@ collections:
             widget: list
             fields:
               - label: Title
-                name: title
+                name: heading
                 widget: string
               - label: Text
                 name: text
