--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -148,12 +148,6 @@ collections:
             fields:
               - { label: "Document name", name: name, widget: string }
               - { label: "Document", name: path, widget: file }
-          - label: "People"
-            name: people
-            widget: list
-            fields:
-              - { label: Description, name: description, widget: string }
-              - { label: Picture, name: picture, widget: image }
           - label: "Terms of Reference Documents"
             name: termsOfReference
             widget: list
@@ -182,6 +176,18 @@ collections:
                 fields:
                   - { label: Minutes Name, name: name, widget: string }
                   - { label: Minutes Document, name: path, widget: file }
+      - name: "Meet the Governors"
+        name: "meet the governors"
+        file: src/about-us/meet-the-governors.md
+        fields:
+          - label: "People"
+              name: people
+              widget: list
+              fields:
+                - { label: Title, name: title, widget: string }
+                - { label: Picture, name: picture, widget: image }
+                - { label: Bio, name: bio, widget: markdown, buttons: [bold, italic], minimal: true}
+
   - name: information
     label: Information
     files:
